--- a/styles/style.css
+++ b/styles/style.css
@@ -21,20 +21,6 @@
   position: relative;
 }
 
-/* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
-.header__square-pic {
-  height: 568px;
-  width: 568px;
-}
-
-/* и элемента с модификатором вида ключ-значение */
-.table__cell_theme_dark {
-  width: 200px;
-  color: white;
-  margin-right: 0;
-  margin-top: 80px;
-}
-
 .logo {
   width: 228px;
   height: 32px;
@@ -93,7 +79,7 @@
     position: absolute;
     right: 0;
     top: 64px;
-    z-index: 1
+    z-index: 1;
   }
 
   .two-columns {
