--- a/styles/style.css
+++ b/styles/style.css
@@ -6,7 +6,7 @@
   /* выше установили ограничение по максимальной ширине */
   margin: 0 auto;
   /* выше для экранов больше 1600px отцентрировали весь контент */
-  font-family: 'Helvetica Neue', Arial, sans-serif;
+  font-family: "Helvetica Neue", Arial, sans-serif;
 }
 
 .header {
@@ -30,328 +30,323 @@
   position: absolute;
   top: 30px;
   left: 64px;
-  background-image: url(/images/logo_place_header.svg);
-  background-size: contain;
   z-index: 3;
 }
 
 .header__title {
-   align-self: center;
-   width: 730px;
-   font-size: 102px;
-   font-weight: 600;
-   flex-wrap: wrap;
-   line-height: 96px;
-   margin-left: 64px;
-   z-index: 3;
+  align-self: center;
+  width: 730px;
+  font-size: 102px;
+  font-weight: 600;
+  flex-wrap: wrap;
+  line-height: 96px;
+  margin-left: 64px;
+  z-index: 3;
 }
 
 .header__subtitle {
-   position: absolute;
-   bottom: 30px;
-   left: 64px;
-   width: 388px;
-   line-height: 25px;
-   z-index: 3;
-   flex-wrap: wrap;
-   font-weight: normal;
-   font-size: 18px;
-   }
+  position: absolute;
+  bottom: 30px;
+  left: 64px;
+  width: 388px;
+  line-height: 25px;
+  z-index: 3;
+  flex-wrap: wrap;
+  font-weight: normal;
+  font-size: 18px;
+}
 
 .header__link {
-  color:  #2f80ed;
+  color: #2f80ed;
   text-decoration: none;
-  }
+}
 
-  .header__main-illustration {
-    width: 765px;
-    height: 608px;
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    z-index: 2;
-  }
+.header__main-illustration {
+  width: 765px;
+  height: 608px;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  z-index: 2;
+}
 
-  .header__square-pic {
-    width: 568px;
-    height: 568px;
-    background-color: #2f80ed;
-    position: absolute;
-    right: 0;
-    top: 64px;
-    z-index: 1;
-  }
+.header__square-pic {
+  width: 568px;
+  height: 568px;
+  background-color: #2f80ed;
+  position: absolute;
+  right: 0;
+  top: 64px;
+  z-index: 1;
+}
 
-  .two-columns {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 100px auto;
-    width: 80%;
-  }
+.two-columns {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 100px auto;
+  width: 80%;
+}
 
-  .two-columns__brief {
-    align-self: flex-start;
-    color: #2f80ed;
-    font-size: 18px;
-    font-weight: normal;
-    line-height: 1.2;
-    width: 175px;
-    margin: 0;
-    padding: 0;
-  }
+.two-columns__brief {
+  align-self: flex-start;
+  color: #2f80ed;
+  font-size: 18px;
+  font-weight: normal;
+  line-height: 1.2;
+  width: 175px;
+  margin: 0;
+  padding: 0;
+}
 
-  .two-columns__main-text {
-    min-width: 784px;
-    width: 80%;
-    list-style: none;
-    font-size: 24px;
-    line-height: 34px;
-    margin: 0;
-    padding: 0;
-    flex-wrap: wrap;
-  }
+.two-columns__main-text {
+  min-width: 784px;
+  width: 80%;
+  list-style: none;
+  font-size: 24px;
+  line-height: 34px;
+  margin: 0;
+  padding: 0;
+  flex-wrap: wrap;
+}
 
-  .two-columns__paragraph {
-    margin: 0 0 30px;
-  }
+.two-columns__paragraph {
+  margin: 0 0 30px;
+}
 
-  .two-columns__span-accent {
-    font-weight: 600;
-  }
+.two-columns__span-accent {
+  font-weight: 600;
+}
 
-  .section-title {
-    display: flex;
-    justify-content: center;
-    width: 60%;
-    font-size: 60px;
-    font-weight: 600;
-    line-height: 1.15;
-    margin: 100px auto 20px;
-  }
+.section-title {
+  display: flex;
+  justify-content: center;
+  width: 60%;
+  font-size: 60px;
+  font-weight: 600;
+  line-height: 1.15;
+  margin: 100px auto 20px;
+}
 
-  .section-subtitle {
-    display: flex;
-    justify-content: center;
-    margin: auto;
-    width: 60%;
-    font-size: 24px;
-    font-weight: normal;
-    line-height: 34px;
-  }
+.section-subtitle {
+  display: flex;
+  justify-content: center;
+  margin: auto;
+  width: 60%;
+  font-size: 24px;
+  font-weight: normal;
+  line-height: 34px;
+}
 
-  .table {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    margin: auto auto 100px;
-    padding: 0;
-    width: 1100px;
-    list-style: none;
-  }
+.table {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin: auto auto 100px;
+  padding: 0;
+  width: 1100px;
+  list-style: none;
+}
 
-  .table__cell {
-    margin: 60px 0 0;
-    width: 250px;
-  }
+.table__cell {
+  margin: 60px 0 0;
+  width: 250px;
+}
 
-  .table__heading {
-    font-size: 24px;
-    font-weight: 600;
-    line-height: 1.15;
-    margin: 0;
-  }
+.table__heading {
+  font-size: 24px;
+  font-weight: 600;
+  line-height: 1.15;
+  margin: 0;
+}
 
-  .table__text {
-    margin: 20px 0 0;
-    font-size: 18px;
-    font-weight: normal;
-    line-height: 1.2;
-  }
+.table__text {
+  margin: 20px 0 0;
+  font-size: 18px;
+  font-weight: normal;
+  line-height: 1.2;
+}
 
-  .feynman {
-    background-color: #f2f2f2;
-    margin: 0;
-    position: relative;
-    background-position: bottom left;
-    background-repeat: no-repeat;
-    background-size: contain;
-    padding-top: 100px;
-    height: 890px;
-    z-index: -1;
-  }
+.feynman {
+  background-color: #f2f2f2;
+  margin: 0;
+  position: relative;
+  background-position: bottom left;
+  background-repeat: no-repeat;
+  background-size: contain;
+  padding-top: 100px;
+  height: 890px;
+  z-index: -1;
+}
 
-  .feynman__title {
-   display: flex;
-   text-align: center;
-   width: 648px;
-   margin: 0 auto 70px;
-   font-size: 120px;
-   font-weight: 600;
-   line-height: 1.15;
-  }
+.feynman__title {
+  display: flex;
+  text-align: center;
+  width: 648px;
+  margin: 0 auto 70px;
+  font-size: 120px;
+  font-weight: 600;
+  line-height: 1.15;
+}
 
-  .feynman__subtitle {
-   display: flex;
-   justify-content: center;
-   margin: 0 auto auto;
-   font-size: 36px;
-   font-weight: normal;
-   line-height: 51px;
-  }
+.feynman__subtitle {
+  display: flex;
+  justify-content: center;
+  margin: 0 auto auto;
+  font-size: 36px;
+  font-weight: normal;
+  line-height: 51px;
+}
 
-  .feynman__link {
-   position: absolute;
-   top: 50%;
-   right: 48px;
-   font-size: 36px;
-   font-weight: normal;
-   line-height: 51px;
-   color: #2f80ed;
-   text-decoration: none;
-  }
+.feynman__link {
+  position: absolute;
+  top: 50%;
+  right: 48px;
+  font-size: 36px;
+  font-weight: normal;
+  line-height: 51px;
+  color: #2f80ed;
+  text-decoration: none;
+}
 
-  .feyman__main-illustration {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 867px;
-    height: 637px;
-    z-index: -1;
-  }
+.feyman__main-illustration {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 867px;
+  height: 637px;
+  z-index: -1;
+}
 
-  .kaufman {
-    background-color: #1f1f1f;
-    overflow: hidden;
-    position: relative;
-    z-index: -1;
-    color: white;
-  }
+.kaufman {
+  background-color: #1f1f1f;
+  overflow: hidden;
+  position: relative;
+  z-index: -1;
+  color: white;
+}
 
-  .section-title_theme_dark {
-    display: flex;
-    justify-content: center;
-    width: 60%;
-    font-size: 60px;
-    font-weight: 600;
-    line-height: 1.15;
-    margin: 90px auto 20px;
-  }
+.section-title_theme_dark {
+  display: flex;
+  justify-content: center;
+  width: 60%;
+  font-size: 60px;
+  font-weight: 600;
+  line-height: 1.15;
+  margin: 90px auto 20px;
+}
 
-  .section-subtitle_theme_dark {
-    display: flex;
-    justify-content: center;
-    margin: auto;
-    width: 60%;
-    font-size: 24px;
-    font-weight: normal;
-    line-height: 34px;
-  }
+.section-subtitle_theme_dark {
+  display: flex;
+  justify-content: center;
+  margin: auto;
+  width: 60%;
+  font-size: 24px;
+  font-weight: normal;
+  line-height: 34px;
+}
 
-  .table_theme_dark {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    margin: auto auto 90px;
-    padding: 0;
-    width: 1100px;
-    list-style: none;
-  }
+.table_theme_dark {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin: auto auto 90px;
+  padding: 0;
+  width: 1100px;
+  list-style: none;
+}
 
-  .table__cell_theme_dark {
-    margin: 80px 0 0;
-    width: 200px;
-  }
+.table__cell_theme_dark {
+  margin: 80px 0 0;
+  width: 200px;
+}
 
-  .table__heading_theme_dark {
-    font-size: 24px;
-    font-weight: 600;
-    line-height: 1.15;
-    margin: 0;
-  }
+.table__heading_theme_dark {
+  font-size: 24px;
+  font-weight: 600;
+  line-height: 1.15;
+  margin: 0;
+}
 
-  .table__text_theme_dark {
-    margin: 20px 0 0;
-    font-size: 18px;
-    font-weight: normal;
-    line-height: 1.2;
-  }
+.table__text_theme_dark {
+  margin: 20px 0 0;
+  font-size: 18px;
+  font-weight: normal;
+  line-height: 1.2;
+}
 
-  .kaufman__triangle {
-    width: 877px;
-    height: 877px;
-    position: absolute;
-    right: -210px;
-    top: 0;
-    z-index: -1;
-  }
+.kaufman__triangle {
+  width: 877px;
+  height: 877px;
+  position: absolute;
+  right: -210px;
+  top: 0;
+  z-index: -1;
+}
 
-  .footer {
-    background-color: #1f1f1f;
-    min-height: 350px;
-    display: flex;
-  }
+.footer {
+  background-color: #1f1f1f;
+  min-height: 350px;
+  display: flex;
+}
 
-  .footer__columns {
-    color: white;
-    display: flex;
-    justify-content: space-between;
-    width: 90%;
-    margin: 60px auto 40px;
-  }
+.footer__columns {
+  color: white;
+  display: flex;
+  justify-content: space-between;
+  width: 90%;
+  margin: 60px auto 40px;
+}
 
-  .footer__column_content_copyright {
-    display: flex;
-    flex-basis: 711px;
-    flex-direction: column;
-    justify-content: space-between;
-  }
+.footer__column_content_copyright {
+  display: flex;
+  flex-basis: 711px;
+  flex-direction: column;
+  justify-content: space-between;
+}
 
-  .logo__place_footer {
-    align-self: flex-start;
-    background-image: url(/images/logo_place_footer.svg);
-    background-size: contain;
-  }
+.logo__place_footer {
+  align-self: flex-start;
+}
 
-  .footer__author {
-    font-size: 18px;
-    font-weight: normal;
-    line-height: 25px;
-    margin: 18px 0;
-  }
+.footer__author {
+  font-size: 18px;
+  font-weight: normal;
+  line-height: 25px;
+  margin: 18px 0;
+}
 
-  .footer__column_content_info {
-    align-items: flex-start;
-  }
+.footer__column_content_info {
+  align-items: flex-start;
+}
 
-  .footer__column-heading {
-    font-size: 18px;
-    font-weight: 600;
-    line-height: 30px;
-    margin: 0 0 20px;
-  }
+.footer__column-heading {
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 30px;
+  margin: 0 0 20px;
+}
 
-  .footer__column-links {
-    list-style: none;
-    margin: 0 0 16px;
-    padding: 0;
-  }
+.footer__column-links {
+  list-style: none;
+  margin: 0 0 16px;
+  padding: 0;
+}
 
-  .footer__column-link {
-    font-size: 18px;
-    line-height: 30px;
-    font-weight: normal;
-    color: white;
-    text-decoration: none;
-  }
+.footer__column-link {
+  font-size: 18px;
+  line-height: 30px;
+  font-weight: normal;
+  color: white;
+  text-decoration: none;
+}
 
-  .footer__column_content_social {
-    align-items: flex-start;
-  }
+.footer__column_content_social {
+  align-items: flex-start;
+}
 
-  .footer__social-icon {
-    width: 16px;
-    height: 16px;
-    margin-right: 10px;
-  }
-  
+.footer__social-icon {
+  width: 16px;
+  height: 16px;
+  margin-right: 10px;
+}
