--- a/bloks/opacity/opacity.css
+++ b/bloks/opacity/opacity.css
@@ -1,9 +1,13 @@
 @keyframes opacity {
-  from {
+  0% {
     opacity: 1;
   }
 
-  to {
+  50% {
+    opacity: 0.8;
+  }
+
+  100% {
     opacity: 0.6;
   }
 }
