--- a/styles/index.css
+++ b/styles/index.css
@@ -1,3 +1,4 @@
+@import url(../styles/normalize.css);
 @import url(../bloks/rotation/rotation.css);
 @import url(../bloks/opacity/opacity.css);
 @import url(../bloks/page.css);
@@ -97,5 +98,4 @@
 @import url(../bloks/footer/__column-heading/footer__column-heading.css);
 @import url(../bloks/footer/__column-links/footer__column-links.css);
 @import url(../bloks/footer/__column/_content/footer__column_content_social.css);
-
 @import url(../bloks/footer/__column-link/footer__column-link.css);
